<resources>
    <string name="app_name">Personal Fitness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- List of client RecicleView -->
    <string name="labelgym">Gym : </string>
    <string name="time">Time : </string>
    <string name="workout">Workouts</string>
    <string name="labelgoal">Goal:</string>
    <string name="userimagedescription"> User Image</string>

    <string name="labelclientname">Name:</string>
    <string name="hintnameclient">Name of new client</string>

    <string name="title_activity_login_fitness">Use login</string>
    <string name="loginContentDescription">Login screen</string>
    <string name="usernotfound">User logout!</string>
    <string name="nav_group">Account</string>
    <string name="nav_logout_name">Logout</string>
    <string name="nav_exit_name">Exit</string>
    <string name="title_activity_new_client_fitness">New Client</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="det_time">07:30 AM</string>
    <string name="totalworkout">Total Workouts</string>

    <string name="image">Image</string>
    <string name="name_dum">Patricia Oliveira</string>
    <string name="body_location">Strong Body</string>
    <string name="time_dum">07:30pm</string>

    <string name="fill_all_fields_message">Por favor, preencher todos os campos!</string>

    <string name="clicktoopenmap">Click to open the map</string>

    <!--<string name="google_maps_key">AIzaSyASjTYINNbC7PplmafFDbMusyGO3tGehAk</string>-->
    <string name="google_maps_key">AIzaSyDhsLJkbK19TDLaqB76IKffXzeTT4f9n_8</string>

    <string name="personal_content_description">Imagem de um rosto simbolizando uma cliente!</string>

    <string name="widget_empty_text">Sem novo registro...</string>

</resources>
