<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_baking_item"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    style="@style/cardViewStyle">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        >

        <!--This TextView holds the weather data for one particular day in the forecast-->
        <ImageView
            android:id="@+id/card_baking_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"/>

        <LinearLayout
            android:id="@+id/linearLayoutInformation"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/totalWorkoutLinear"
            app:layout_constraintStart_toEndOf="@+id/card_baking_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/clientNameInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_dum" />

            <LinearLayout
                android:id="@+id/gymlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelgym" />

                <TextView
                    android:id="@+id/gymLocationInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_location" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gymTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/gymTimeWorkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_dum" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/totalWorkoutLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/card_baking_image"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/totalWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout" />

            <TextView
                android:id="@+id/totalworkout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_sharp_panorama_fish_eye_24px"
                android:gravity="center"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>